[package]
name = "torbalan"
version = "0.1.0"
edition = "2021"
authors = ["Mirsha"]

[dependencies]
slint = "1.9.1"
libc = "0.2"
pam = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }

[build-dependencies]
slint-build = "1.9.1"
